add help for SubCommand
add missing internal message for update sub command and use singular form for point/tag